--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
             scale: 2;
             transition: .5s ease-in-out;
         }
-        p{
-            visibility: hidden;
+        a{
+            text-decoration: none;
+            color:#000
         }
     </style>
 </head>
 <body>
-    <h1>Treasure Hunt!</h1>
-    <p>visit this link: </p>
+    <a href="./one.html">
+        <h1>Treasure Hunt!</h1>
+    </a>
 </body>
 </html>
