--- a/one.html
+++ b/one.html
@@ -21,6 +21,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+            align-items: center;
             width:300px;
             height:100px;
             background-color: #fff;
@@ -30,6 +31,8 @@
         input[type="number"]{
             border-radius: 10px;
             border: 2px solid #000;
+            padding: 5px;
+            height: 20px;
         }
     </style>
 </head>
@@ -37,6 +40,18 @@
     <div class="box">
         <h1>Enter the code:</h1>
         <input type="number" id="code">
+        <input type="button" value="GO" onclick="check()">
     </div>
+    <script>
+        function check(){
+            const value=document.getElementById("code").value;
+            if(value==754893){
+                window.location.href="./two.html";
+            }
+            else{
+                window.alert("incorrect code")
+            }
+        }
+    </script>
 </body>
 </html>
