--- a/one.html
+++ b/one.html
@@ -34,6 +34,18 @@
             padding: 5px;
             height: 20px;
         }
+        input[type="button"]{
+            height:30px;
+            background-color: #fff;
+            border-radius: 10px;
+            width: 50px;
+            margin-left: 10px;
+            border: 2px solid #000;
+        }
+        input[type="button"]:hover{
+            background-color: #000;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
