--- a/one.html
+++ b/one.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treasure Hunt</title>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="box">
         <h1>Enter the code:</h1>
         <input type="number" id="code">
-        <input type="button" value="GO">
+        <button id="btn" onclick="check()">Go</button>
     </div>
 </body>
 </html>
