--- a/wrong.html
+++ b/wrong.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CORRECT CODE: 754893-->
     <title>Code is Here</title>
     <style>
         *{
@@ -24,6 +23,7 @@
     </style>
 </head>
 <body>
+    <!-- CORRECT CODE: 754893-->
     <a href="./one.html">
         <h1>WRONG CODE !!</h1>
     </a>
