--- a/two.html
+++ b/two.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treasure Hunt</title>
+    <style>
+        *{
+            margin:0px;
+        }
+        body{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height:100dvh;
+            background-color: #000;
+            color: #fff;
+            font-size: 25pt;
+        }
+        a{
+            text-decoration: none;
+            color:#fff;
+        }
+        img{
+            height:30px;
+            margin-left:10px;
+        }
+    </style>
 </head>
 <body>
-    
+    <a href="./asssets/img.pdf" download="img.pdf">
+        Download<img src="./asssets/dwn.png">
+    </a>
 </body>
 </html>
