--- a/two.html
+++ b/two.html
@@ -25,11 +25,23 @@
             height:30px;
             margin-left:10px;
         }
+        .box{
+            border: 1px solid #fff;
+            padding: 20px;
+            border-radius: 20px;
+            box-shadow: 1px 1px 30px #808080;
+        }
+        .box:hover{
+            border: 1px solid #a8fd40;
+            box-shadow: 1px 1px 100px #a8fd40;
+        }
     </style>
 </head>
 <body>
-    <a href="./asssets/img.pdf" download="img.pdf">
-        Download<img src="./asssets/dwn.png">
-    </a>
+    <div class="box">
+        <a href="./asssets/img.pdf" download="img.pdf">
+            Download<img src="./asssets/dwn.png">
+        </a>
+    </div>
 </body>
 </html>
