index changed with image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         }
         body{
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             align-items: center;
             height:100dvh;
@@ -30,7 +31,7 @@
 </head>
 <body>
     <a href="./one.html">
-        <h1>Treasure Hunt!</h1>
+        <img src="./asssets/trs.png">
     </a>
 </body>
 </html>
