--- a/two.html
+++ b/two.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="box">
-        <a href="./asssets/img.pdf" download="img.pdf">
+        <a href="./asssets/treasure.jpg" download="treasure.jpg">
             Download<img src="./asssets/dwn.png">
         </a>
     </div>
